Starting to add roles. Some issues with database.

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -16,6 +16,11 @@
 # Use the configured native session manager:
 #securityManager.sessionManager = $sessionManager
 
+# Realms
+authorizingRealm = labs.deltaspike.login.realm.AuthorizingTestRealm
+
+securityManager.realms = $iniRealm, $authorizingRealm
+
 # Login filter definitions: <filter>.property
 # Notice how we didn't define the class for the FormAuthenticationFilter ('authc'), UserFilter ('user') (see http://shiro.apache.org/web.html) - it is instantiated and available already:
 
@@ -36,6 +41,7 @@ ssl.enabled = false
 # when you only need a small number of statically-defined
 # set of User accounts.
 
+# daner275 = test, admin
 daner275 = test
 
 [roles]
@@ -43,10 +49,20 @@ daner275 = test
 # when you only need a small number of statically-defined
 # roles.
 
+role1 = role1
+
+ADMIN = admin
+
+# admin = *
+
+# secure = secure:*
+# secure_add = secure:add
+# secure_remove = secure:remove
+
 [urls]
 # The 'urls' section is used for url-based security
 # in web applications.  We'll discuss this section in the
 # Web documentation
 
 /login.jsf = authc
-/secured/** = user
+/secured/** = user, roles[role1]
