--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <!--<logback.version>0.9.18</logback.version>-->
         <deltaspike.version>0.4-incubating-SNAPSHOT</deltaspike.version>
         <shiro.version>1.2.1</shiro.version>
+        <eclipselink.version>2.4.1</eclipselink.version>
 
         <arquillian.version>1.0.3.Final</arquillian.version>
     </properties>
@@ -127,6 +128,14 @@
             <version>3.1</version>
             <scope>provided</scope>
         </dependency>
+<!--
+        <dependency>
+        	<groupId>org.glassfish</groupId>
+        	<artifactId>osgi-jpa</artifactId>
+        	<version>3.1</version>
+            <scope>provided</scope>
+        </dependency>
+-->
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.servlet</artifactId>
@@ -143,6 +152,42 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+        </dependency>
+        <!-- JPA -->
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jpa-module-api</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jpa-module-impl</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!--
+                <dependency>
+                    <groupId>org.eclipse.persistence</groupId>
+                    <artifactId>eclipselink</artifactId>
+                    <version>${eclipselink.version}</version>
+                    <scope>compile</scope>
+                </dependency>
+        -->
+        <dependency>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>javax.persistence</artifactId>
+          <version>2.0.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>eclipselink</artifactId>
+          <version>${eclipselink.version}</version>
         </dependency>
 
         <!-- Security -->
@@ -198,7 +243,6 @@
             <scope>test</scope>
             <version>${arquillian.version}</version>
         </dependency>
-
     </dependencies>
 
 
@@ -216,7 +260,6 @@
                         <configuration>
                             <source>${compileSource}</source>
                             <target>${compileSource}</target>
-                            <compilerArgument>-Dorg.apache.deltaspike.ProjectStage=Development</compilerArgument>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -238,6 +281,9 @@
                         <version>2.14</version>
                         <configuration>
                             <skipTests>true</skipTests>
+                            <systemPropertyVariables>
+                                <org.apache.deltaspike.ProjectStage>Development</org.apache.deltaspike.ProjectStage>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
