Added CDI support through shiro-cdi-web. See https://issues.apache.org/jira/browse/SHIRO-422, https://github.com/hwellmann/shiro

--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -7,6 +7,10 @@
 # Such as the securityManager, Realms and anything
 # else needed to build the SecurityManager
 
+
+shiro.loginUrl = /login.xhtml
+
+
 #sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 # configure properties (like session timeout) here if desired
 
@@ -24,10 +28,10 @@ securityManager.realms = $iniRealm, $authorizingRealm
 # Login filter definitions: <filter>.property
 # Notice how we didn't define the class for the FormAuthenticationFilter ('authc'), UserFilter ('user') (see http://shiro.apache.org/web.html) - it is instantiated and available already:
 
-authc.loginUrl = /login.jsf
-authc.usernameParam = login:username
-authc.passwordParam = login:password
-authc.rememberMeParam = login:rememberMe
+#authc.loginUrl = /login.jsf
+#authc.usernameParam = login:username
+#authc.passwordParam = login:password
+#authc.rememberMeParam = login:rememberMe
 
 # user login filter for "remember me"
 user = labs.deltaspike.filter.FacesAjaxAwareUserFilter
