--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -2,14 +2,15 @@
 # Shiro INI configuration
 # =======================
 
+
+# NOT USED BY SecurityProducer.java!! see resources/shiro.ini
+
+
+
 [main]
 # Objects and their properties are defined here,
 # Such as the securityManager, Realms and anything
 # else needed to build the SecurityManager
-
-
-shiro.loginUrl = /login.xhtml
-
 
 #sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 # configure properties (like session timeout) here if desired
@@ -21,17 +22,27 @@ shiro.loginUrl = /login.xhtml
 #securityManager.sessionManager = $sessionManager
 
 # Realms
-authorizingRealm = labs.deltaspike.login.realm.AuthorizingTestRealm
+#authorizingRealm = labs.deltaspike.login.realm.AuthorizingTestRealm
+# $authorizingTestRealm in injected through CDI (@ShiroIni annotated)
+securityManager.realms = $iniRealm, $authorizingTestRealm
 
-securityManager.realms = $iniRealm, $authorizingRealm
+passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
+
+# $passwordService is a named CDI bean (See SecurityProducer)
+passwordMatcher.passwordService = $passwordService
+
+authorizingTestRealm.credentialsMatcher = $passwordMatcher
+
+builtInCacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
+securityManager.cacheManager = $builtInCacheManager
 
 # Login filter definitions: <filter>.property
 # Notice how we didn't define the class for the FormAuthenticationFilter ('authc'), UserFilter ('user') (see http://shiro.apache.org/web.html) - it is instantiated and available already:
 
-#authc.loginUrl = /login.jsf
-#authc.usernameParam = login:username
-#authc.passwordParam = login:password
-#authc.rememberMeParam = login:rememberMe
+authc.loginUrl = /login.jsf
+authc.usernameParam = login:username
+authc.passwordParam = login:password
+authc.rememberMeParam = login:rememberMe
 
 # user login filter for "remember me"
 user = labs.deltaspike.filter.FacesAjaxAwareUserFilter
@@ -53,13 +64,12 @@ daner275 = test
 # when you only need a small number of statically-defined
 # roles.
 
-role1 = role1
+#role1 = role1
+#ADMIN = admin
 
-ADMIN = admin
+ADMIN = *
 
-# admin = *
-
-# secure = secure:*
+secure = secure:*
 # secure_add = secure:add
 # secure_remove = secure:remove
 
@@ -69,4 +79,5 @@ ADMIN = admin
 # Web documentation
 
 /login.jsf = authc
-/secured/** = user, roles[role1]
+#/secured/** = user, roles[admin]
+/secured/** = user
